Fixed alignment issues

--- a/Team-B/styles/about.css
+++ b/Team-B/styles/about.css
@@ -1,4 +1,4 @@
-.about-header-container{
+.about .about-header-container{
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -8,41 +8,43 @@
     background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url('../assets/images/amelia.jpg') no-repeat center center / cover;
 }
 
-.about-header-container .title{
+.about .about-header-container .title{
     font-size: 30px;
     margin-bottom: 25px;
 }
-.about-header-container .contents{
+.about .about-header-container .contents{
     text-align: center;
     width: 40%;
 }
-.blue-container{
+.about .blue-container{
     background-color: #10C9C3;
     color: white;
     padding: 95px 20px;
     font-weight: bold;
     font-family:  'Nunito Sans', sans-serif;
 }
-.blue-container span{
+
+.about .blue-container span{
     font-size: 12px;
 }
-.about-me-container{
+
+.about .about-me-container{
     background-color: #F5F5F5;
 }
 
-.about-me-title{
+.about .about-me-container .about-me-title{
     font-family:  'Nunito Sans', sans-serif;
     font-weight: bolder;
     font-size: 32px;
     padding-top: 140px;
     letter-spacing: 1.5px;
 }
-.about-me-content{
+.about .about-me-container .about-me-content{
     font-family:  'Nunito Sans', sans-serif;
     color: grey;
     margin-top: 30px;
 }
-.project-container{
+.about .project-container{
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -50,12 +52,12 @@
     padding: 100px 20px;
 
 }
-.project-title{
+.about .project-container .project-title{
     font-size: 32px;
     letter-spacing: 1.5px;
     margin-bottom: 30px;
 }
-.project-contents{
+.about .project-container .project-contents{
     text-align: center;
     margin-bottom: 30px;
     color: grey;
@@ -64,10 +66,16 @@
 
 /*media-queries*/
 @media(max-width:768px){
-    .about-header-container .contents{
+    .about .about-header-container .contents{
         width: initial;
     }
-    .project-contents{
+    .about .project-contents{
          width: initial;
+    }
+     .about .blue-container .margin-xs{
+        margin-bottom: 60px;
+    }
+    .about .project-container .project-contents {
+        width: 100%;
     }
 }
